--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,9 @@ python-jose[cryptography]
 passlib[bcrypt]
 python-multipart
 python-dotenv
-google-generativeai 
+google-generativeai
+schedule
+aiohttp
+beautifulsoup4
+requests
+asyncio 
